Fix background too dark

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
 }
 
 body {
-	background-color: #F5DEB3;
+	background-color: #DCD4C4;
 }
 
 hr {
